add loading animation

--- a/test.html
+++ b/test.html
@@ -34,7 +34,7 @@
               <div class="team-member-details">
                 <h2>余智瑋</h2>
                 <p>-組長-</p>
-                <p>Experience: esp8266、Arduino uno、HTML、CSS、Web server、NTPClient</p>
+                <p>Experience: esp8266、Arduino uno、HTML、CSS、JavaScript、Web server、NTPClient、Line Notify</p>
                 <p>Email: wayne070903@gmail.com</p>
               </div>
             </div>
